# RobotBatteryChargingStation

./: README.md
02_Firmwares/RBCS_HMI/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
02_Firmwares/RBCS_HMI/components/app/: CMakeLists.txt  app_states.c  app_ui_helpers.c
02_Firmwares/RBCS_HMI/components/app/include/: app_io.h  app_states.h
02_Firmwares/RBCS_HMI/components/modbus_manager/: CMakeLists.txt  modbus_manager.c
02_Firmwares/RBCS_HMI/components/modbus_manager/include/: modbus_manager.h
02_Firmwares/RBCS_HMI/components/modbus_master_manager/: modbus_master_manager.c
02_Firmwares/RBCS_HMI/components/ui/: CMakeLists.txt  CMakeLists.txt.squareline  filelist.txt  project.info  setup_ui.py  ui.c  ui.h
02_Firmwares/RBCS_HMI/components/ui/components/: ui_comp.c  ui_comp.h  ui_comp_bar1.c  ui_comp_bar1.h  ui_comp_hook.c  ui_comp_hook.h
02_Firmwares/RBCS_HMI/components/ui/images/: ui_img_scrmain_batteryempty_png.c  ui_img_scrmain_batteryicon_png.c  ui_img_scrmain_batterywarning_png.c  ui_img_scrmain_linerobottoslot1_png.c  ui_img_scrmain_linerobottoslot2_png.c  ui_img_scrmain_linerobottoslot3_png.c  ui_img_scrmain_linerobottoslot4_png.c  ui_img_scrmain_linerobottoslot5_png.c  ui_img_scrmain_lineslot1torobot_png.c  ui_img_scrmain_lineslot2torobot_png.c  ui_img_scrmain_lineslot3torobot_png.c  ui_img_scrmain_lineslot4torobot_png.c  ui_img_scrmain_lineslot5torobot_png.c  ui_img_scrmain_robotcharging_png.c  ui_img_scrmain_robotfullbattery_png.c  ui_img_scrmain_robotlowbattery_png.c  ui_img_scrnotconnected_background_png.c  ui_img_scrnotconnected_close_png.c  ui_img_scrnotconnected_warningicon_png.c  ui_img_scrnotconnecticon_png.c  ui_img_scrsetting_list_png.c  ui_img_scrsettingicon_png.c  ui_img_scrsplash_loadingbarface_png.c
02_Firmwares/RBCS_HMI/components/ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_Screen4.c  ui_Screen4.h  ui_scrMain.c  ui_scrMain.h  ui_scrSetting.c  ui_scrSetting.h  ui_scrSplash.c  ui_scrSplash.h
02_Firmwares/RBCS_HMI/components/ui_support/: CMakeLists.txt  ui_support.c
02_Firmwares/RBCS_HMI/components/ui_support/include/: ui_support.h
02_Firmwares/RBCS_HMI/main/: CMakeLists.txt  idf_component.yml  main.c  sqrline_ui.c
02_Firmwares/RBCS_HMI/main/app/: app_io.h
02_Firmwares/RBCS_HMI_B/: CMakeLists.txt
02_Firmwares/RBCS_HMI_B/main/: CMakeLists.txt  idf_component.yml
02_Firmwares/RBCS_MAINBOARD/: CMakeLists.txt
02_Firmwares/RBCS_MAINBOARD/components/app/: CMakeLists.txt  app_states.c
02_Firmwares/RBCS_MAINBOARD/components/app/include/: app_common.h  app_io.h  app_states.h
02_Firmwares/RBCS_MAINBOARD/components/limit_switch/: CMakeLists.txt  limit_switch.c
02_Firmwares/RBCS_MAINBOARD/components/modbus_slave_manager/: CMakeLists.txt  modbus_slave_manager.c
02_Firmwares/RBCS_MAINBOARD/components/stepper_tb6600/: CMakeLists.txt  README.md  stepper_tb6600.c
02_Firmwares/RBCS_MAINBOARD/main/: idf_component.yml  main.c
02_Firmwares/RBCS_READ_BATTERY_DATA/: .cproject
02_Firmwares/RBCS_READ_BATTERY_DATA/APP/: app_states.c  app_states.h
02_Firmwares/RBCS_READ_BATTERY_DATA/Core/Src/: freertos.c
02_Firmwares/RBCS_READ_BATTERY_DATA/Debug/: RBCS_READ_BATTERY_DATA.elf  RBCS_READ_BATTERY_DATA.list  RBCS_READ_BATTERY_DATA.map  makefile  objects.list  sources.mk
02_Firmwares/RBCS_READ_BATTERY_DATA/Debug/APP/: app_params.cyclo  app_params.d  app_params.su  app_states.cyclo  app_states.d  app_states.su  subdir.mk
02_Firmwares/RBCS_READ_BATTERY_DATA/Debug/EE/: ee.cyclo  ee.d  ee.su  subdir.mk  sysmem.cyclo  sysmem.d  sysmem.su
02_Firmwares/RBCS_READ_BATTERY_DATA/Debug/HSM/: hsm.cyclo  hsm.d  hsm.su  hsm_timer.cyclo  hsm_timer.d  hsm_timer.su  subdir.mk
02_Firmwares/RBCS_READ_BATTERY_DATA/Debug/MODBUS-LIB/: Modbus.cyclo  (+6 more)
02_Fiwmwares/RBCS_HMI/: CMakeLists.txt  sdkconfig
02_Fiwmwares/RBCS_HMI/main/: CMakeLists.txt  idf_component.yml  main.c
03_Softwares/MODBUS_SLAVE/: address_common.mbs  address_modbus_1.mbs  address_modbus_2.mbs  address_modbus_3.mbs  address_modbus_4.mbs  address_modbus_5.mbs
03_Softwares/SQUARELINE_RBCS_HMI/: SQUARELINE_RBCS_HMI.sll  SQUARELINE_RBCS_HMI.slp  SQUARELINE_RBCS_HMI.spj  SQUARELINE_RBCS_HMI_events.py  project.info
(+20 files in other folders)
